Fixed shifted sidebar header position for mapped wells.

--- a/sites/all/themes/custom/bvng/less/country.less
+++ b/sites/all/themes/custom/bvng/less/country.less
@@ -26,6 +26,13 @@
 
 .sidebar-header-country {
   margin-left: 25px;
+  padding-left: 20px;
+  width: 260px;
+  color: @cGray70;
+}
+
+.sidebar-header-country-map {
+  margin-left: 25px;
   padding-left: 0px;
   width: 260px;
   color: @cGray70;
